--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,204 @@
 <resources>
-    <string name="app_name">DK_HabitTracker</string>
+    <!-- App Name & Titles -->
+    <string name="app_name">Habit Tracker</string>
+    <string name="habit_tracker">Habit\n     Tracker</string>
+
+    <!-- Buttons & Actions -->
+    <string name="use_offline">Use Offline</string>
+    <string name="sign_in">Sign In</string>
+    <string name="btn_login">Sign In</string>
+    <string name="register">Register</string>
+    <string name="back_to_login">Back to Login</string>
+    <string name="forgot_password">Forgot Password?</string>
+
+    <!-- Input Placeholders -->
+    <string name="enter_email">Enter your email</string>
+    <string name="enter_password">Enter your password</string>
+    <string name="confirm_password">Confirm Password</string>
+    <string name="enter_nickname">Enter Nickname</string>
+
+    <!-- Internet & Permission Messages -->
+    <string name="no_internet_title">Connection Issue</string>
+    <string name="no_internet_message">You are not connected to the internet</string>
+    <string name="try_again">Try again</string>
+    <string name="back">Back</string>
+    <string name="go_to_wifi_settings">WI-FI settings</string>
+    <string name="internet_restored">Internet restored</string>
+
+    <string name="permission_denied_title">Permission denied</string>
+    <string name="permission_denied_message">Permission denied to use the internet</string>
+    <string name="ok">OK</string>
+
+    <!-- Password & Registration Messages -->
+    <string name="password_weak">Weak password</string>
+    <string name="password_strong">Password strong enough</string>
+    <string name="user_registered_successfully">Registration successful</string>
+
+    <string name="email_available">Email is available ✅</string>
+    <string name="email_taken">Email is already in use ❌</string>
+    <string name="nickname_available">Nickname is available ✅</string>
+    <string name="nickname_taken">Nickname is already taken ❌</string>
+
+    <string name="weak_password">Weak password ❌ (Min. 8 characters)</string>
+    <string name="medium_password">Medium password ⚠ (Include a number and uppercase)</string>
+    <string name="strong_password">Strong password ✅</string>
+
+    <string name="password_match">Passwords match ✅</string>
+    <string name="password_no_match">Passwords do not match ❌</string>
+
+    <!-- Error Messages -->
+    <string name="fill_all_fields">Please fill in all fields</string>
+    <string name="passwords_no_match">Passwords do not match</string>
+    <string name="email_in_use">Email is already in use</string>
+    <string name="nickname_in_use">Nickname is already taken</string>
+    <string name="password_not_strong">Password must be strong (at least 8 characters, 1 number, 1 uppercase)</string>
+
+    <string name="registration_failed">Registration Failed: %1$s</string>
+    <string name="registration_success">User Registered Successfully</string>
+    <string name="firestore_error">Firestore Error: %1$s</string>
+
+    <!-- Debugging -->
+    <string name="login_clicked">Login Clicked</string>
+    <string name="forgot_password_clicked">Forgot Password Clicked</string>
+
+    <!-- New ones to sort later -->
+    <string name="verification_email_sent">Verification email sent to %1$s. Please check your inbox.</string>
+    <string name="verification_email_failed">Failed to send verification email.</string>
+    <string name="login_success">Logged in successfully</string>
+    <string name="verify_email_prompt">Please verify your email first</string>
+    <string name="login_failed">Login failed, no account exists with these credentials</string>
+    <string name="internet_connected">Connected to\nthe internet</string>
+    <string name="no_internet">No internet\nconnection</string>
+    <string name="reset_password">Reset Password</string>
+    <string name="password_reset_sent">Password reset email sent! Check your inbox.</string>
+    <string name="password_reset_failed">Error: %1$s</string>
+    <string name="email_not_registered">This email is not registered in our system.</string>
+    <string name="my_habits">My Habits</string>
+    <string name="signed_out">You Have Been Signed Out</string>
+
+    <string name="home">Home</string>
+    <string name="statistics">Statistics</string>
+    <string name="add_habit">Add Habit</string>
+    <string name="settings">Settings</string>
+    <string name="social">Social</string>
+    <string name="language_selection">App Language</string>
+    <string name="user_preferences">User Preferences</string>
+    <string name="user_details">User Details</string>
+    <string name="logout">Sign Out</string>
+
+    <!-- AddHabitActivity stringek -->
+    <string name="habit_name">Title</string>
+    <string name="habit_description">Description</string>
+    <string name="habit_goal">Goal</string>
+    <string name="save_habit">Save</string>
+    <string name="goal_value">Goal Value</string>
+    <string name="goal_period">Goal Period</string>
+    <string name="custom_unit">Unit</string>
+    <string name="habit_type">Habit Type</string>
+    <string name="build_habit">Build</string>
+    <string name="quit_habit">Quit</string>
+    <string name="goal_period_default">Value</string>
+
+    <!-- More Strings that have been added - Új stringek, szétosztani funkcio szerint inkább-->
+    <string name="fill_required_fields">Fill required fields</string>
+    <string name="custom_measurement">Custom</string>
+    <string name="enter_custom_measurement">Enter custom measurement</string>
+    <string name="habit_saved_offline">Habit saved offline</string>
+    <string-array name="goal_period_options">
+        <item>Daily</item>
+        <item>Weekly</item>
+        <item>Monthly</item>
+    </string-array>
+    <string-array name="measurement_units">
+        <item>Times</item>
+        <item>Count</item>
+        <item>Steps</item>
+        <item>Reps</item>
+        <item>Calories</item>
+        <item>Cups</item>
+        <item>m</item>
+        <item>km</item>
+        <item>sec</item>
+        <item>min</item>
+        <item>hr</item>
+        <item>ml</item>
+        <item>g</item>
+        <item>mg</item>
+        <item>Custom</item>
+    </string-array>
+    <string-array name="measurement_units_sk">
+        <item>Krát</item>
+        <item>Počet</item>
+        <item>Kroky</item>
+        <item>Opakovania</item>
+        <item>Kalórie</item>
+        <item>Poháre</item>
+        <item>m</item>
+        <item>km</item>
+        <item>sek</item>
+        <item>min</item>
+        <item>hoď</item>
+        <item>ml</item>
+        <item>g</item>
+        <item>mg</item>
+        <item>Vlastné</item>
+    </string-array>
+
+    <string name="invalid_goal_value">Invalid goal value</string>
+    <string name="not_completed">Not Completed</string>
+    <string name="completed">Completed</string>
+    <string name="enter_habit_name">Enter Habit Name</string>
+    <string name="habit_save_failed">Habit Save Failed</string>
+    <string name="no_habits_left">Empty list 1</string>
+    <string name="no_completed_habits">Empty list 2</string>
+
+    <!-- HabitDetailActivity strings -->
+    <string name="progress">Progress:</string>
+    <string name="save">Save</string>
+    <string name="delete">Delete</string>
+    <string name="cancel">Cancel</string>
+
+    <string name="delete_habit_title">Delete Habit</string>
+    <string name="delete_habit_message">Are you sure you want to delete this habit?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+
+    <string name="habit_deleted">Habit deleted.</string>
+    <string name="progress_updated">Progress updated.</string>
+
+    <string name="description">Description:</string>
+    <string name="goal">Goal:</string>
+    <string name="habit_type_habit_details">Type:</string>
+    <string name="goal_period_habit_details">Goal Period:</string>
+    <string name="measurement">Measurement:</string>
+
+    <string name="enter_progress_value">Enter progress value</string>
+    <string name="add_progress">Add Progress</string>
+    <string name="enter_valid_number">Please enter a valid number</string>
+    <string name="enter_valid_positive_number">Please enter a positive number</string>
+    <string name="enter_reasonable_value">Please enter a reasonable progress value (max: 100,000).</string>
+
+
+    <!-- EditHabitActivity strings -->
+    <string name="edit_habit">Edit Habit</string>
+    <string name="save_changes">Save Changes</string>
+    <string name="modify_habit_title">Modify habit?</string>
+    <string name="modify_habit_message">Are you sure you want to modify the habit? All progress will be lost.</string>
+    <string name="habit_updated">Habit Updated</string>
+    <string name="error_loading_habit">Error Loading Habit</string>
+    <string name="habit_not_found">Habit Not Found</string>
+
+    <!-- SettingsActivity -->
+    <string name="username_placeholder">Username: </string>
+    <string name="email_placeholder">Email: </string>
+    <string name="your_uuid">Your UUID: </string>
+
+    <!-- SocialActivity -->
+    <string name="no_social_access">In order to access Social features, you have to be signed in and connected to the internet</string>
+
+    <!-- StatisticsActivity -->
+    <string name="daily_stats_title">Statistics - Daily</string>
+    <string name="general_stats_title">Statistics - General</string>
+    <string name="habit_list">Habit List</string>
+    <string name="general_statistics">General Statistics</string>
 </resources>
