--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -34,17 +34,17 @@
     <string name="password_strong">Heslo akceptované</string>
     <string name="user_registered_successfully">Registrácia používateľa bola úspešná</string>
 
-    <string name="email_available">Email je dostupný ✅</string>
-    <string name="email_taken">Email je už použitý ❌</string>
-    <string name="nickname_available">Prezývka je dostupná ✅</string>
-    <string name="nickname_taken">Prezývka je už obsadená ❌</string>
+    <string name="email_available">Email je dostupný</string>
+    <string name="email_taken">Email je už použitý</string>
+    <string name="nickname_available">Prezývka je dostupná</string>
+    <string name="nickname_taken">Prezývka je už obsadená</string>
 
-    <string name="weak_password">Slabé heslo ❌ (Min. 8 znakov)</string>
-    <string name="medium_password">Stredne silné heslo ⚠ (Obsahovať číslo a veľké písmeno)</string>
-    <string name="strong_password">Silné heslo ✅</string>
+    <string name="weak_password">Slabé heslo (Min. 8 znakov)</string>
+    <string name="medium_password">Stredne silné heslo (Heslo musí obsahovať aspon 1 číslo a 1 veľké písmeno)</string>
+    <string name="strong_password">Silné heslo</string>
 
-    <string name="password_match">Heslá sa zhodujú ✅</string>
-    <string name="password_no_match">Heslá sa nezhodujú ❌</string>
+    <string name="password_match">Heslá sa zhodujú</string>
+    <string name="password_no_match">Heslá sa nezhodujú</string>
 
     <!-- Error Messages -->
     <string name="fill_all_fields">Vyplňte všetky polia</string>
@@ -66,26 +66,28 @@
     <!-- New ones to sort later -->
     <string name="verification_email_sent">Overovací e-mail bol odoslaný na %1$s. Skontrolujte si svoju schránku.</string>
     <string name="verification_email_failed">Nepodarilo sa odoslať overovací e-mail.</string>
-    <string name="login_success">(SK)Logged in successfully</string>
-    <string name="verify_email_prompt">(SK)Please verify your email first</string>
-    <string name="login_failed">(SK)Login failed, no account exists with these credentials</string>
-    <string name="internet_connected">Pripojeny\nk internetu</string>
-    <string name="no_internet">Nie ste pripojeny\nk internetu</string>
+    <string name="login_success">Prihlásenie bolo úspešné</string>
+    <string name="verify_email_prompt">Najprv si overte svoj e-mail</string>
+    <string name="login_failed">Prihlásenie zlyhalo, účet s týmito údajmi neexistuje</string>
+    <string name="internet_connected">Pripojené\nk internetu</string>
+    <string name="no_internet">Nie je pripojenie\nk internetu</string>
     <string name="reset_password">Obnoviť heslo</string>
     <string name="password_reset_sent">E-mail na obnovenie hesla bol odoslaný! Skontrolujte si schránku.</string>
     <string name="password_reset_failed">Chyba: %1$s</string>
     <string name="email_not_registered">Tento e-mail nie je registrovaný v našom systéme.</string>
     <string name="my_habits">Moje návyky</string>
     <string name="signed_out">Boli ste odhlásený</string>
+    <string name="invalid_email_format">Zadajte platnú e-mailovú adresu.</string>
+
 
     <string name="home">Domov</string>
     <string name="statistics">Štatistiky</string>
-    <string name="add_habit">Pridať zvyk</string>
+    <string name="add_habit">Pridať návyk</string>
     <string name="settings">Nastavenia</string>
     <string name="social">Social</string>
     <string name="language_selection">Jazyk aplikácie</string>
-    <string name="user_preferences">Používateľské preferencie</string>
-    <string name="user_details">Používatelské informácie</string>
+    <string name="user_preferences">Všeobecné</string>
+    <string name="user_details">Používatelské informácie a navigácia</string>
     <string name="logout">Odhlásiť sa</string>
 
     <!-- AddHabitActivity stringek -->
@@ -95,17 +97,20 @@
     <string name="save_habit">Uložiť</string>
     <string name="goal_value">Hodnota Ciele</string>"
     <string name="goal_period">Interval Ciele</string>
-    <string name="custom_unit">(SK)Measurement</string>
+    <string name="custom_unit">Merná jednotka</string>
     <string name="habit_type">Typ návyku</string>
     <string name="build_habit">Budovať</string>
     <string name="quit_habit">Ukončiť</string>
-    <string name="goal_period_default">(SK)Value</string>
+    <string name="goal_period_default">Hodnota</string>
+    <string name="share_habit">Zdieľať tento návyk</string>
+    <string name="habit_saved_offline_and_shared">Zvyk bol uložený offline a zdieľaný online!</string>
+    <string name="habit_saved_but_share_failed">Zvyk bol uložený offline, ale nepodarilo sa ho zdieľať online.</string>
 
     <!-- More Strings that have been added - Szétosztani végén-->
-    <string name="fill_required_fields">Vyplnte vsekty polia</string>
+    <string name="fill_required_fields">Vyplňte všetky povinné polia</string>
     <string name="custom_measurement">Vlastné</string>
-    <string name="enter_custom_measurement">Zadajte vlastny measurement</string>
-    <string name="habit_saved_offline">Návyk ulozeny offline</string>
+    <string name="enter_custom_measurement">Zadajte vlastnú mernú jednotku</string>
+    <string name="habit_saved_offline">Návyk bol uložený offline</string>
     <string-array name="goal_period_options">
         <item>Denne</item>
         <item>Týždenne</item>
@@ -129,19 +134,21 @@
         <item>Vlastné</item>
     </string-array>
 
-    <string name="invalid_goal_value">(SK)Invalid goal value</string>
+    <string name="invalid_goal_value">Neplatná cieľová hodnota</string>
     <string name="not_completed">Nesplnené</string>
-    <string name="completed">Splené</string>
+    <string name="completed">Splnené</string>
     <string name="enter_habit_name">Zadajte názov zvyku</string>
-    <string name="habit_save_failed">Ulozenie zvyku sa zlyhala</string>
-    <string name="no_habits_left">Prazdny zoznam 1</string>
-    <string name="no_completed_habits">Prazdny zoznam 2</string>
+    <string name="habit_save_failed">Uloženie návyku zlyhalo</string>
+    <string name="no_habits_left">Zoznam nesplnených návykov je prázdny</string>
+    <string name="no_completed_habits">Zoznam splnených návykov je prázdny</string>
 
     <!-- HabitDetailActivity strings -->
     <string name="progress">Pokrok:</string>
     <string name="save">Uložiť</string>
     <string name="delete">Vymazať</string>
     <string name="cancel">Zrušiť</string>
+    <string name="progress_for_date">Pokrok pre: </string>
+
 
     <string name="delete_habit_title">Vymazať návyk</string>
     <string name="delete_habit_message">Naozaj chcete vymazať tento návyk?</string>
@@ -157,33 +164,113 @@
     <string name="goal_period_habit_details">Cieľové obdobie:</string>
     <string name="measurement">Merná jednotka:</string>
 
-    <string name="enter_progress_value">(SK)Enter progress value</string>
-    <string name="add_progress">(SK)Add Progress</string>
-    <string name="enter_valid_number">(SK)Please enter a valid number</string>
-    <string name="enter_valid_positive_number">(SK)Please enter a positive number</string>
+    <string name="enter_progress_value">Zadajte hodnotu pokroku</string>
+    <string name="add_progress">Pridať pokrok</string>
+    <string name="enter_valid_number">Zadajte platné číslo</string>
+    <string name="enter_valid_positive_number">Zadajte kladné číslo</string>
     <string name="enter_reasonable_value">Zadajte rozumnú hodnotu progresu (max: 100 000).</string>
 
-
-    <!-- EditHabitActivity strings -->
+    <!-- EditHabitActivity -->
     <string name="edit_habit">Editovať návyk</string>
     <string name="save_changes">Uložiť modifikácie</string>
     <string name="modify_habit_title">Editovať návyk?</string>
     <string name="modify_habit_message">Ste si istí, že chcete upraviť tento zvyk? Všetky dosiahnuté pokroky sa stratia.</string>
     <string name="habit_updated">Návyk aktualizovaný</string>
-    <string name="error_loading_habit">(SK)Error Loading Habit</string>
-    <string name="habit_not_found">(SK)Habit Not Found</string>
+    <string name="error_loading_habit">Chyba pri načítavaní návyku</string>
+    <string name="habit_not_found">Návyk nebol nájdený</string>
 
     <!-- SettingsActivity -->
-    <string name="username_placeholder">Prih. Meno: </string>
-    <string name="email_placeholder">Email: </string>
-    <string name="your_uuid">UUID: </string>
+    <string name="username_placeholder">Prih. meno: %1$s</string>
+    <string name="email_placeholder">Email: %1$s</string>
+    <string name="your_uuid">UUID: %1$s</string>
+    <string name="return_to_start">Späť na úvod</string>
+    <string name="reset_progress">Vymazať</string>
+    <string name="reset_progress_info">Vymazať pokrok</string>
+    <string name="delete_habits">Odstrániť</string>
+    <string name="delete_habits_info">Odstrániť všetky návyky</string>
+    <string name="confirm_reset_title">Vynulovať všetok pokrok</string>
+    <string name="confirm_reset_message">Týmto sa odstráni všetok pokrok, ale návyky zostanú. Ste si istý?</string>
+    <string name="confirm_delete_title">Vymazať všetky návyky</string>
+    <string name="confirm_delete_message">Týmto sa natrvalo vymažú všetky návyky a ich pokrok. Ste si istý? (Netýka sa zdielaných návykov)</string>
+    <string name="progress_reset_success">Pokrok bol úspešne odstránený</string>
+    <string name="habits_deleted_success">Všetky návyky a pokrok boli vymazané</string>
+
+    <!-- Notification Strings -->
+    <string name="reminder_label">Denná pripomienka</string>
+    <string name="select_reminder_time">Čas pripomienky:</string>
+    <string name="pick_time">Vybrať čas</string>
+    <string name="reminder_set">Pripomienka bola nastavená</string>
+    <string name="reminder_cancelled">Pripomienka bola zrušená</string>
+    <string name="notifications_enabled">Upozornenia boli povolené</string>
+    <string name="notifications_denied">Povolenie na upozornenia bolo zamietnuté</string>
+    <string name="reminder_title">Habit Tracker</string>
+    <string name="reminder_message">Nezabudni si dnes skontrolovať svoje návyky!</string>
+    <string name="channel_name">Denné pripomenutie</string>
+    <string name="channel_description">Pripomenutie na sledovanie návykov</string>
+    <string name="notifications_disabled_title">Upozornenia sú odmietnuté</string>
+    <string name="notifications_disabled_message">Raz ste už zamietli povolenie na upozornenia. Povoliť ho môžete manuálne v systémových nastaveniach.</string>
+    <string name="open_settings">Otvoriť nastavenia</string>
+
+    <string name="notifications_denied_permanently">Povoliť notifickácie môžete v systémových nastaveniach.</string>
 
     <!-- SocialActivity -->
-    <string name="no_social_access">(SK)In order to access Social features, you have to be signed in and connected to the internet</string>
+    <string name="no_social_access">Pre prístup k sociálnym funkciám sa musíte prihlásiť a byť pripojený k internetu</string>
 
     <!-- StatisticsActivity -->
     <string name="daily_stats_title">Štatistiky - Denné</string>
     <string name="general_stats_title">Štatistiky - Všeobecné</string>
     <string name="habit_list">Zoznam návykov</string>
     <string name="general_statistics">Všeobecné štatistiky</string>
+    <string name="followed_habits">Štatistiky - Sledované návyky</string>
+    <string name="no_habits_message">Nemáte žiadne sledované návyky</string>
+
+    <!-- DailyStatisticsActivity -->
+    <string name="selected_date">%s</string>
+    <string name="completed_dsa">Splnené</string>
+    <string name="not_completed_dsa">Nesplnené</string>
+    <string name="completion_status">Stav dokončenia</string>
+    <string name="completed_habits">Splnené návyky</string>
+    <string name="not_completed_habits">Nesplnené návyky</string>
+    <string name="back_to_statistics">Späť na štatistiky</string>
+    <string name="graphs">Denné grafy</string>
+
+    <!-- SocialActivity -->
+    <string name="user_shared_habits">Zdieľané návyky používateľov</string>
+    <string name="my_shared_habits">Mnou zdieľané návyky</string>
+
+    <!-- SharedHabitDetailActivity -->
+    <string name="cancel_shda">Zrušiť</string>
+    <string name="remove_sharing">Odstrániť zdielanie</string>
+    <string name="adapt_habit">Prevziať návyk</string>
+    <string name="habit_adapted">Návyk bol úspešne pridaný!</string>
+    <string name="habit_removed">Zdieľanie návyku bolo odstránené!</string>
+
+    <!-- AddHabitActivity + EditHabitActivity -->
+    <string name="period_daily">/Denne</string>
+    <string name="period_weekly">/Týždenne</string>
+    <string name="period_monthly">/Mesačne</string>
+
+    <!-- ForgotPasswordActivity + RegisterActivity -->
+    <string name="unknown_error">Neznáma chyba</string>
+
+    <!-- HabitDetailActivity + HabitStatisticsActivity -->
+    <string name="progress_with_value">Pokrok: %1$d</string>
+    <string name="description_with_value">Popis: %1$s</string>
+    <string name="goal_with_value">Cieľ: %1$d</string>
+    <string name="habit_type_with_value">Typ: %1$s</string>
+    <string name="goal_period_with_value">Cieľové obdobie: %1$s</string>
+    <string name="measurement_with_value">Merná jednotka: %1$s</string>
+    <string name="progress_for_date_with_value">Pokrok pre: %1$s</string>
+
+    <!-- HabitStatisticsActivity -->
+    <string name="current_streak_with_unit">Aktuálny streak: %1$d %2$s</string>
+    <string name="longest_streak_with_unit">Najdlhší streak: %1$d %2$s</string>
+    <string name="habit_strength_with_percent">Sila návyku: %1$s</string>
+    <string name="habit_strength_phrase_with_emoji">%1$s %2$s</string>
+
+    <!-- SharedHabitAdapter -->
+    <string name="shared_by">\@%1$s</string>
+
+    <!-- SharedHabitDetailActivity -->
+    <string name="goal_period_prefix">/%1$s</string>
 </resources>
