--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -44,6 +44,7 @@
 
     <!-- MyHabitsActivity -->
     <string name="my_habits">Moje návyky</string>
+    <string name="progress_before_creation_warning">Tento dátum je pred vytvorením návyku, pokrok sa nezapočíta do sérií a silu návyku</string>
 
     <!-- SettingsActivity -->
     <string name="signed_out">Boli ste odhlásený</string>
